--- a/decore-ui/decore.html
+++ b/decore-ui/decore.html
@@ -8,6 +8,7 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <link rel="stylesheet" href="css/blueimp-gallery.min.css">
   <link rel="stylesheet" href="css/decore.css">
+  <link href="https://fonts.googleapis.com/css?family=Raleway:500" rel="stylesheet">
 </head>
 <body>
   <div id="wrapper">
