--- a/decore-ui/decore.html
+++ b/decore-ui/decore.html
@@ -12,7 +12,12 @@
 </head>
 <body>
   <div id="wrapper">
-  
+  <div id="weather">
+      <a class="weatherwidget-io" href="https://forecast7.com/tr/41d0128d98/istanbul/" data-label_1="İSTANBUL" data-label_2="Hava Durumu" data-font="Fira Sans" data-icons="Climacons Animated" data-theme="weather_one" >İSTANBUL WEATHER</a>
+      <script>
+        !function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="https://weatherwidget.io/js/widget.min.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","weatherwidget-io-js");
+      </script>
+  </div>
   <div id="blueimp-gallery-carousel" class="blueimp-gallery blueimp-gallery-carousel">
     <div class="slides"></div>
       <h3 class="title"></h3>
@@ -31,7 +36,7 @@
     </div>
   </div>
   <div class="scroll-left">
-    <p>sdjfakilsdhjfşılasdhfşlkajsdhfşkljasdhfkşjlashdfkjpash</p>
+    <p>deCore akıllı içerik yönetim sistemi, kayan yazı testi.</p>
   </div>
   <script src="js/blueimp-gallery.min.js"></script>
   <script>
@@ -65,6 +70,12 @@
     carousel: true
   })
   </script>
+  <script>
+    var parent = document.getElementById("weather");
+    var child = document.getElementById("link_get_widget");
+    parent.removeChild(child);
+  </script>
+   
 </body>
 
 </html>
