--- a/decore-ui/decore.html
+++ b/decore-ui/decore.html
@@ -13,10 +13,18 @@
 <body>
   <div id="wrapper">
   <div id="weather">
-      <a class="weatherwidget-io" href="https://forecast7.com/tr/41d0128d98/istanbul/" data-label_1="İSTANBUL" data-label_2="Hava Durumu" data-font="Fira Sans" data-icons="Climacons Animated" data-theme="weather_one" >İSTANBUL WEATHER</a>
+      <a class="weatherwidget-io" href="https://forecast7.com/tr/41d0128d98/istanbul/" data-label_1="İSTANBUL" data-label_2="Hava Durumu" data-font="Fira Sans" data-icons="Climacons" data-theme="weather_one" >İSTANBUL WEATHER</a>
       <script>
         !function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="https://weatherwidget.io/js/widget.min.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","weatherwidget-io-js");
       </script>
+  </div>
+  <div id="currency">
+    <!-- Please do not edit this code - http://mconvert.net/exchange-rates-widget starts here -->
+    <iframe src="http://mconvert.net/get-exchange-rates-widget?base=try&amount=1&lang=en&curr=usd,aud,cad,eur,gbp,btc&theme=blue&type=2&font=2&ssl=1" width="100%" height="600" frameborder="0" scrolling="no"></iframe>
+    <div style="font-size:12px;font-family:arial;text-align:right;">
+      <a href="http://mconvert.net/" style="text-decoration:none;color:#999;">Currency converter</a>
+    </div>
+    <!-- http://mconvert.net/exchange-rates-widget ends here -->
   </div>
   <div id="blueimp-gallery-carousel" class="blueimp-gallery blueimp-gallery-carousel">
     <div class="slides"></div>
